# protonvpn-cli

./: Cargo.toml  Makefile  README.md
.github/workflows/: cd.yml  ci.yml
nix/: config.nix  flake.nix  module.nix  package.nix
src/: cache.rs  cli.rs  config.rs  daemon.rs  killswitch.rs  lib.rs  main.rs  protocol.rs  service.rs  utils.rs
src/api/: mod.rs  types.rs
src/client/: mod.rs  openvpn.rs
templates/: launchagent  openvpn  systemd-service
tests/: protocol.rs
