[package]
name = "protonvpn-rs"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["cargo", "derive", "string"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.121"
ron = "0.8"
askama = "0.12.1"
rand = "0.8.5"
sysinfo = "0.31.2"
signal-hook = "0.3.17"
bitflags = { version = "2.6.0", features = ["serde"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
colored = "2.1.0"
log = { version = "0.4.22", features = ["kv"] }
pretty_env_logger = "0.5.0"
elevate = "0.6.1"
pnet = "0.35.0"
parking_lot = "0.12.3"
